--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
             <h1 class="heading-1">Order Now</h1>
             <div class="order-container">
                 <div class="order-inside-container">
-                    <img src="assets/images/img4.jpg" class="images" />
+                    <img src="assets/images/img4.jpg" alt="Burger image" class="images" />
                     <h1 class="order-heading">BURGER</h1>
                     <p class="order-para">Lorem Ipsum has been the industry's standard dummy text</p>
                 </div>
                 <div class="order-inside-container">
-                    <img src="assets/images/img2.jpg" class="images" />
+                    <img src="assets/images/img2.jpg" alt="Pizza image" class="images" />
                     <h1 class="order-heading">PIZZA</h1>
                     <p class="order-para">Lorem Ipsum has been the industry's standard dummy text</p>
                 </div>
                 <div class="order-inside-container">
-                    <img src="assets/images/img3.jpg" class="images" />
+                    <img src="assets/images/img3.jpg" alt="Pasta image" class="images" />
                     <h1 class="order-heading">PASTA</h1>
                     <p class="order-para">Lorem Ipsum has been the industry's standard dummy text</p>
                 </div>
